feat: enhance HotelWebsiteService with database integration for room availability and reviews